<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cput.ac.za.bankingapp.FirstScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/idNo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/firstName"
        android:id="@+id/textView2"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastName"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtIdno"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtFirstName"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/txtIdno"
        android:layout_alignStart="@+id/txtIdno" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtLastName"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPreview"
        android:id="@+id/btnPreview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/longId"
        android:id="@+id/txtLongId"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/txtLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longtxt"
        android:layout_alignBottom="@+id/txtLongId"
        android:layout_alignRight="@+id/txtLastName"
        android:layout_alignEnd="@+id/txtLastName"
        android:layout_alignLeft="@+id/txtLastName"
        android:layout_alignStart="@+id/txtLastName"
        android:inputType="none" />
</RelativeLayout>
